k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: go-grpc
spec:
  selector:
    app: inventory-service
  ports:
    - protocol: TCP
      port: 50054
      targetPort: 50054
  type: ClusterIP
