k8s/inventory.yaml
# Inventory Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      annotations:
        io.containerd.cri.runtime-handler: kata-qemu-sev
      labels:
        app: inventory-service
    spec:
      runtimeClassName: kata-qemu-sev
      containers:
      - name: inventory-service
        image: tanakaryuki/inventory-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 50054
---
# Inventory Service Service
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - protocol: TCP
      port: 50054
      targetPort: 50054
  type: ClusterIP
