k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: go-grpc
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 50053
      targetPort: 50053
  type: ClusterIP
