k8s/order.yaml
# Order Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      annotations:
        io.containerd.cri.runtime-handler: kata-qemu-sev
      labels:
        app: order-service
    spec:
      runtimeClassName: kata-qemu-sev
      containers:
      - name: order-service
        image: tanakaryuki/order-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 50053
---
# Order Service Service
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 50053
      targetPort: 50053
  type: ClusterIP
