k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: go-grpc
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  type: ClusterIP
