k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: go-grpc
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
  type: ClusterIP
