k8s/product.yaml
# Product Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      annotations:
        io.containerd.cri.runtime-handler: kata-qemu-sev
      labels:
        app: product-service
    spec:
      runtimeClassName: kata-qemu-sev
      containers:
      - name: product-service
        image: tanakaryuki/product-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 50052
---
# Product Service Service
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
  type: ClusterIP
