k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: go-grpc
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
