k8s/user.yaml
# User Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      annotations:
          io.containerd.cri.runtime-handler: kata-qemu-sev
      labels:
        app: user-service
    spec:
      runtimeClassName: kata-qemu-sev
      containers:
      - name: user-service
        image: tanakaryuki/user-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
---
# User Service Service
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
